// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination should render 1`] = `
<div>
  <ul
    class="pagination pagination-root"
  >
    <li
      class="page-item disabled"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        disabled=""
        href="/?page=0"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-left icon-root"
          role="presentation"
        >
          <use
            xlink:href="#angle-left"
          />
        </svg>
      </a>
    </li>
    <li
      class="page-item active"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=1"
      >
        1
      </a>
    </li>
    <li
      class="page-item disabled"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        disabled=""
        href="/?page=2"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right icon-root"
          role="presentation"
        >
          <use
            xlink:href="#angle-right"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Pagination should render a lot of pages with a middle page active 1`] = `
<div>
  <ul
    class="pagination pagination-root"
  >
    <li
      class="page-item"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=49"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-left icon-root"
          role="presentation"
        >
          <use
            xlink:href="#angle-left"
          />
        </svg>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=1"
      >
        1
      </a>
    </li>
    <li
      class="page-item"
    >
      <div
        aria-haspopup="true"
        class="dropdown dropdown-root"
      >
        <button
          class="button-root dropdown-toggle page-link btn btn-unstyled"
          type="button"
        >
          <span
            class="text-truncate"
          >
            ...
          </span>
          
        </button>
      </div>
    </li>
    <li
      class="page-item"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=48"
      >
        48
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=49"
      >
        49
      </a>
    </li>
    <li
      class="page-item active"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=50"
      >
        50
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=51"
      >
        51
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=52"
      >
        52
      </a>
    </li>
    <li
      class="page-item"
    >
      <div
        aria-haspopup="true"
        class="dropdown dropdown-root"
      >
        <button
          class="button-root dropdown-toggle page-link btn btn-unstyled"
          type="button"
        >
          <span
            class="text-truncate"
          >
            ...
          </span>
          
        </button>
      </div>
    </li>
    <li
      class="page-item"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=100"
      >
        100
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=51"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right icon-root"
          role="presentation"
        >
          <use
            xlink:href="#angle-right"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Pagination should render a lot of pages with the end page active 1`] = `
<div>
  <ul
    class="pagination pagination-root"
  >
    <li
      class="page-item"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=99"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-left icon-root"
          role="presentation"
        >
          <use
            xlink:href="#angle-left"
          />
        </svg>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=1"
      >
        1
      </a>
    </li>
    <li
      class="page-item"
    >
      <div
        aria-haspopup="true"
        class="dropdown dropdown-root"
      >
        <button
          class="button-root dropdown-toggle page-link btn btn-unstyled"
          type="button"
        >
          <span
            class="text-truncate"
          >
            ...
          </span>
          
        </button>
      </div>
    </li>
    <li
      class="page-item"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=98"
      >
        98
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=99"
      >
        99
      </a>
    </li>
    <li
      class="page-item active"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=100"
      >
        100
      </a>
    </li>
    <li
      class="page-item disabled"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        disabled=""
        href="/?page=101"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right icon-root"
          role="presentation"
        >
          <use
            xlink:href="#angle-right"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Pagination should render with a lot of pages 1`] = `
<div>
  <ul
    class="pagination pagination-root"
  >
    <li
      class="page-item disabled"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        disabled=""
        href="/?page=0"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-left icon-root"
          role="presentation"
        >
          <use
            xlink:href="#angle-left"
          />
        </svg>
      </a>
    </li>
    <li
      class="page-item active"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=1"
      >
        1
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=2"
      >
        2
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=3"
      >
        3
      </a>
    </li>
    <li
      class="page-item"
    >
      <div
        aria-haspopup="true"
        class="dropdown dropdown-root"
      >
        <button
          class="button-root dropdown-toggle page-link btn btn-unstyled"
          type="button"
        >
          <span
            class="text-truncate"
          >
            ...
          </span>
          
        </button>
      </div>
    </li>
    <li
      class="page-item"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=100"
      >
        100
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href="/?page=2"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right icon-root"
          role="presentation"
        >
          <use
            xlink:href="#angle-right"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Pagination should render with buttons if passed an onChange handler 1`] = `
<div>
  <ul
    class="pagination pagination-root"
  >
    <li
      class="page-item disabled"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        disabled=""
        href=""
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-left icon-root"
          role="presentation"
        >
          <use
            xlink:href="#angle-left"
          />
        </svg>
      </a>
    </li>
    <li
      class="page-item active"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        href=""
      >
        1
      </a>
    </li>
    <li
      class="page-item disabled"
    >
      <a
        class="button-root page-link btn btn-unstyled"
        disabled=""
        href=""
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right icon-root"
          role="presentation"
        >
          <use
            xlink:href="#angle-right"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;
